# Modular_system

./: .directory  CMakeLists.txt  TODO.txt  doxy-doc  main.c  main.h  modular_system.kdev4  newmodule.sh  saetta-module.kdev4
.kdev4/: modular_system.kdev4
OldModules/BaseLib/: BASEMODULE.c
OldModules/libprimo/: CMakeLists.txt  CMakeLists.txt~  primo.c  primo.c~  primo.h  primo.h~
OldModules/libquarta/: CMakeLists.txt  quarto.c~  terzo.c~
OldModules/libsecondo/: CMakeLists.txt  CMakeLists.txt~  secondo.c  secondo.h
OldModules/libterzo/: CMakeLists.txt  terzo.c  terzo.h
cloud_libs/: CMakeLists.txt  CMakeLists.txt~  data_exchange.c  data_exchange.h  gest_module.c  gest_module.h  gest_thread.c  gest_thread.h
conf/: close_functions.conf  init_functions.conf  link_name.conf  modules_order.conf  run_functions.conf
modules/: CMakeLists.txt
modules/BASEMODULE/: BASEMODULE.c  BASEMODULE.h  CMakeLists.txt
scripts/: CMakeLists.txt  script_conf.sh  script_functions.sh
shared_libs/: CMakeLists.txt  common_fncs.c  common_fncs.h  common_fncs.h~  data.h  data.h~  debug.h  module.h
