CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FILE(GLOB LIBS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "lib*")
MESSAGE(${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/shared_libs)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/core_libs)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/cloud_libs)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/old_core/sensor)

foreach(LIB ${LIBS})
	if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${LIB})
		MESSAGE(${LIB})
		ADD_SUBDIRECTORY(${LIB})
	endif(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${LIB})
endforeach(LIB)


